--- a/requirements.txt
+++ b/requirements.txt
@@ -12,11 +12,10 @@ charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 cookiecutter==2.6.0
-Django==4.2.16
+Django>=4.2,<5.0
 django-browser-reload==1.15.0
 django-ranged-response==0.2.0
 django-simple-captcha==0.6.0
-django-simplecaptcha==2.0.0
 django-tailwind==3.4.0
 et_xmlfile==2.0.0
 idna==3.10
